# expscaffold

./: .gitignore  README.md  pyproject.toml
expscaffold/: __init__.py  data.py  scaffold.py
tests/: scaffold.py  test_scaffold.py
