[project]
name = "expscaffold"
version = "0.1"
authors = [
    { name="Michael Gilbert", email="gilbertm@mit.edu" }
]
description = "Scaffolding for setting up experiments and collecting data."
readme = "README.md"
requires-python = ">3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "joblib",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
